<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mr. Fit</string>
    <string name="hello_world">Hello world!</string>
    <string name="item0">Home</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_activity_tracker">TrackerActivity</string>
    <string name="title_activity_walking">WalkingActivity</string>
    <string name="title_activity_report">ReportActivity</string>
    <string name="title_activity_statistic">StatisticActivity</string>
    <string name="title_activity_friends">FriendsActivity</string>
    <string name="title_activity_search_friend">SearchFriendActivity</string>
    <string name="title_activity_setting">SettingsActivity</string>
    <string name="item1">Main</string>
    <string name="item2">Tracker</string>
    <string name="item3">Statistics</string>
    <string name="item4">Friends</string>
    <string name="item5">Settings</string>
    <string name="title_activity_trakcer_secondary">TrakcerSecondaryActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="title_section1">Day</string>
    <string name="title_section2">Week</string>
    <string name="title_section3">Month</string>
    <string name="title_activity_tabs_fragment">TabsFragmentActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>

    <style name="DefaultButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#979797</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textStyle">normal</item>
        <item name="android:textSize">20sp</item>
        <item name="android:shadowColor">#f9f9f9</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">1</item>
    </style>

    <string name="sincelastexercise">Since Last Exercise</string>
    <string name="exercisetime">Exercise Time</string>
    <string name="distance">Distance</string>
    <string name="calorieburned">Calorie Burned</string>
    <string name="avatar">Avatar</string>
    <string name="email">Email</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="startwalking">Start Walking</string>
    <string name="startrunning">Start Running</string>
    <string name="setpreference">Set Preference</string>
    <string name="searchnewfriend">Search New Friend</string>
    <string name="button">Button</string>
    <string name="signin">Sign In</string>
    <string name="notuser">Not a user? Sign Up</string>
    <string name="speed">Speed</string>
    <string name="elapsedtime">Elapsed Time</string>
    <string name="stop">Stop</string>
    <string name="title_activity_add_friend">AddFriendActivity</string>
    <string name="title_activity_test_map">TestMapActivity</string>

</resources>
