<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" 
    android:background="@drawable/login_bg"
	>

    <LinearLayout
        android:layout_width="@dimen/standardwidth"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_top2"
        android:orientation="vertical"
        android:padding="@dimen/ten_margin" >

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@drawable/edittext_top_bg"
            android:drawableLeft="@drawable/ic_action_email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/ten_margin"
            android:textColorHint="@color/hint_color" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@drawable/edittext_default_bg"
            android:drawableLeft="@drawable/ic_action_person"
            android:hint="@string/username"
            android:padding="@dimen/ten_margin"
            android:textColorHint="@color/hint_color" />

        <EditText
            android:id="@+id/etPhoneNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@drawable/edittext_default_bg"
            android:drawableLeft="@drawable/ic_action_phone"
            android:hint="Phone Number"
            android:inputType="textPhonetic"
            android:padding="@dimen/ten_margin"
            android:textColorHint="@color/hint_color" />

        <EditText
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@drawable/edittext_bottom_bg"
            android:drawableLeft="@drawable/ic_action_secure"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/ten_margin"
            android:textColorHint="@color/hint_color" />

        <Button
            android:id="@+id/btnSingIn"
            style="@style/DefaultButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/table_margin"
            android:background="@drawable/button_default_bg"
            android:padding="@dimen/ten_margin"
            android:onClick="signUp"
            android:text="@string/signup" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_90"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/login_margin_top"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/login_text_size" />

</RelativeLayout>