<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mr_fit_v1.TrakcerSecondaryActivity$PlaceholderFragment"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/error"
        android:layout_below="@+id/error"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:fontFamily="serif"
        android:text="@string/distance"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/tracker_text_size"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:fontFamily="serif"
        android:text="@string/calorieburned"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/tracker_text_size"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/tracker_margin_left"
        android:layout_marginTop="@dimen/tracker_margin_top2"
        android:fontFamily="serif"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/tracker_text_size2"
        android:textStyle="italic" />


    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/error"
        android:layout_below="@+id/error"
        android:layout_marginTop="@dimen/small_margin_top"
        android:text="" />

    <TextView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="@dimen/medium_margin_top"
        android:fontFamily="serif"
        android:text="@string/elapsedtime"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/tracker_text_size"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/speedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_below="@+id/textView5"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/distanceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/distanceTextView"
        android:layout_below="@+id/distanceTextView"
        android:layout_marginTop="59dp"
        android:fontFamily="serif"
        android:text="@string/speed"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/tracker_text_size"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/burnedCalorieTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView6"
        android:layout_below="@+id/textView6"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageButton
        android:id="@+id/stopButton"
        android:contentDescription="@string/button"
        android:layout_width="@dimen/image_size2"
        android:layout_height="wrap_content"
        android:layout_below="@+id/burnedCalorieTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:src="@drawable/ic_action_stop" />

</RelativeLayout>