<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mr_fit_v1.StatisticsActivity$PlaceholderFragment" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/dimen_left"
            android:layout_marginTop="@dimen/first_icon_margin"
            android:contentDescription="@string/exercisetime"
            android:src="@drawable/ic_action_data_usage" />

        <TextView
            android:id="@+id/exerciseTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_below="@+id/textView1"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/imageView3"
            android:layout_marginTop="@dimen/margin_left"
            android:layout_toRightOf="@+id/imageView3"
            android:text="@string/calorieburned"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/burnedCalorieTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView3"
            android:layout_below="@+id/textView3"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/image_size2"
            android:layout_height="@dimen/image_size2"
            android:layout_alignRight="@+id/imageView1"
            android:layout_below="@+id/imageView1"
            android:layout_marginRight="@dimen/margin_right"
            android:layout_marginTop="@dimen/login_margin_top"
            android:contentDescription="@string/distance"
            android:src="@drawable/ic_action_shuffle" />

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/exerciseTimeTextView"
            android:layout_below="@+id/exerciseTimeTextView" />

        <ProgressBar
            android:id="@+id/progressBar3"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/burnedCalorieTextView"
            android:layout_toRightOf="@+id/imageView3" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/distanceTextView"
            android:layout_below="@+id/distanceTextView" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/progressBar1"
            android:layout_alignTop="@+id/imageView2"
            android:layout_marginTop="@dimen/layout_margin_top20"
            android:text="@string/distance"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/distanceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView5"
            android:layout_below="@+id/textView5"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:layout_alignLeft="@+id/imageView1"
            android:layout_below="@+id/imageView2"
            android:layout_marginTop="@dimen/margin_top_over100"
            android:contentDescription="@string/calorieburned"
            android:src="@drawable/ic_action_good" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView3"
            android:layout_alignTop="@+id/imageView1"
            android:layout_marginTop="@dimen/third_margin_top"
            android:text="@string/exercisetime"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView3"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:text="Do you really do any exercise?"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FF0000"
            android:textSize="25dp" />

</RelativeLayout>
